# Repo-Solutions-Architect

./: .gitignore  README.md
Sesion 2 y 3/: README.md  (+5 more)
sesion_5/vibecoding/: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  README.md  azure-pipelines.yml  pyproject.toml
sesion_5/vibecoding/azure-pipelines/templates/: build-backend.yml  build-frontend.yml  deploy-aks.yml  push-acr.yml
sesion_5/vibecoding/configs/: README.md
sesion_5/vibecoding/data/interim/: README.md
sesion_5/vibecoding/docs/: README.md
sesion_5/vibecoding/docs/architecture/: GenAIDemo_Arquitectura_Solucion.docx  GenAIDemo_Sprint0_Backlog.docx
sesion_5/vibecoding/docs/sprint_0/: README.md  initial_prompt.md
sesion_5/vibecoding/notebooks/: README.md
sesion_5/vibecoding/ops/bicep/: main.bicep
sesion_5/vibecoding/ops/docker/: README.md
sesion_5/vibecoding/ops/k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  namespace.yaml  secret-provider.yaml  services.yaml
sesion_5/vibecoding/ops/scripts/: README.md  deploy.ps1  init_structure.ps1  validate_infra.py
sesion_5/vibecoding/reports/: README.md
sesion_5/vibecoding/src/agents/: README.md
sesion_5/vibecoding/src/common/: README.md
sesion_5/vibecoding/src/config/: README.md
sesion_5/vibecoding/src/core/: README.md
sesion_5/vibecoding/src/dl/: README.md
sesion_5/vibecoding/src/domain/: README.md
sesion_5/vibecoding/src/ml/: README.md
sesion_5/vibecoding/src/observability/: README.md
sesion_5/vibecoding/src/pipelines/: README.md
sesion_5/vibecoding/src/rag/: README.md
(+134 files in other folders)
